Add new version of the ReLUs function.

--- a/notebooks/keras/intermediate-net-in-keras.ipynb
+++ b/notebooks/keras/intermediate-net-in-keras.ipynb
@@ -58,7 +58,7 @@
     "import keras\n",
     "from keras.datasets import mnist\n",
     "from keras.models import Sequential\n",
-    "from keras.layers import Activation, Dense, Dropout\n",
+    "from keras.layers import Activation, Dense, Dropout, LeakyReLU\n",
     "from keras.callbacks import TensorBoard, ModelCheckpoint, EarlyStopping"
    ]
   },
@@ -141,7 +141,7 @@
     "        self.__name__ = 'relus'\n",
     "\n",
     "def relus(Z):\n",
-    "    e_param = 0.07\n",
+    "    e_param = 0.001 #the best so far -> 0.0085\n",
     "    pi = K.variable((3.14))\n",
     "    m = e_param * (K.sigmoid(K.sin(Z)) - K.sigmoid(K.cos(Z)) * K.exp(K.sqrt(pi)))\n",
     "    A = K.maximum(m, Z)\n",
@@ -164,11 +164,14 @@
    "outputs": [],
    "source": [
     "model = Sequential()\n",
-    "model.add(Dense(128, activation = 'relu', kernel_initializer='glorot_uniform', input_shape = (784,)))\n",
+    "model.add(Dense(128, activation = 'linear', kernel_initializer='glorot_uniform', input_shape = (784,)))\n",
+    "model.add(LeakyReLU(alpha=0.0085))\n",
     "model.add(Dropout(0.2))\n",
-    "model.add(Dense(256, activation = 'relu', kernel_initializer='glorot_uniform'))\n",
+    "model.add(Dense(256, activation = 'linear', kernel_initializer='glorot_uniform'))\n",
+    "model.add(LeakyReLU(alpha=0.0085))\n",
     "model.add(Dropout(0.3))\n",
-    "model.add(Dense(1024, activation = 'relu', kernel_initializer='glorot_uniform'))\n",
+    "model.add(Dense(1024, activation = 'linear', kernel_initializer='glorot_uniform'))\n",
+    "model.add(LeakyReLU(alpha=0.0085))\n",
     "model.add(Dropout(0.5))\n",
     "model.add(Dense(10, activation = 'softmax'))"
    ]
@@ -187,13 +190,19 @@
       "=================================================================\n",
       "dense_1 (Dense)              (None, 128)               100480    \n",
       "_________________________________________________________________\n",
+      "leaky_re_lu_1 (LeakyReLU)    (None, 128)               0         \n",
+      "_________________________________________________________________\n",
       "dropout_1 (Dropout)          (None, 128)               0         \n",
       "_________________________________________________________________\n",
       "dense_2 (Dense)              (None, 256)               33024     \n",
       "_________________________________________________________________\n",
+      "leaky_re_lu_2 (LeakyReLU)    (None, 256)               0         \n",
+      "_________________________________________________________________\n",
       "dropout_2 (Dropout)          (None, 256)               0         \n",
       "_________________________________________________________________\n",
       "dense_3 (Dense)              (None, 1024)              263168    \n",
+      "_________________________________________________________________\n",
+      "leaky_re_lu_3 (LeakyReLU)    (None, 1024)              0         \n",
       "_________________________________________________________________\n",
       "dropout_3 (Dropout)          (None, 1024)              0         \n",
       "_________________________________________________________________\n",
@@ -231,7 +240,7 @@
     "if not os.path.exists('model_output'):\n",
     "    os.makedirs('model_output')\n",
     "    \n",
-    "tensorboard = TensorBoard(\"../logs/deepnet-mnist-relus\")"
+    "tensorboard = TensorBoard(\"../logs/deepnet-mnist-leaky-relu-II\")"
    ]
   },
   {
@@ -268,111 +277,87 @@
      "text": [
       "Train on 54000 samples, validate on 6000 samples\n",
       "Epoch 1/50\n",
-      "54000/54000 [==============================] - 5s 92us/step - loss: 0.3996 - acc: 0.8749 - val_loss: 0.1161 - val_acc: 0.9660\n",
+      "54000/54000 [==============================] - 6s 110us/step - loss: 0.3950 - acc: 0.8771 - val_loss: 0.1162 - val_acc: 0.9652\n",
       "Epoch 2/50\n",
-      "54000/54000 [==============================] - 5s 92us/step - loss: 0.1789 - acc: 0.9458 - val_loss: 0.0979 - val_acc: 0.9682\n",
+      "54000/54000 [==============================] - 6s 102us/step - loss: 0.1767 - acc: 0.9471 - val_loss: 0.0972 - val_acc: 0.9708\n",
       "Epoch 3/50\n",
-      "54000/54000 [==============================] - 5s 87us/step - loss: 0.1368 - acc: 0.9582 - val_loss: 0.0858 - val_acc: 0.9727\n",
+      "54000/54000 [==============================] - 5s 101us/step - loss: 0.1358 - acc: 0.9588 - val_loss: 0.0823 - val_acc: 0.9745\n",
       "Epoch 4/50\n",
-      "54000/54000 [==============================] - 6s 107us/step - loss: 0.1164 - acc: 0.9636 - val_loss: 0.0806 - val_acc: 0.9770\n",
+      "54000/54000 [==============================] - 6s 109us/step - loss: 0.1142 - acc: 0.9652 - val_loss: 0.0817 - val_acc: 0.9757\n",
       "Epoch 5/50\n",
-      "54000/54000 [==============================] - 5s 88us/step - loss: 0.0998 - acc: 0.9695 - val_loss: 0.0834 - val_acc: 0.9748\n",
+      "54000/54000 [==============================] - 5s 90us/step - loss: 0.0992 - acc: 0.9702 - val_loss: 0.0773 - val_acc: 0.9760\n",
       "Epoch 6/50\n",
-      "54000/54000 [==============================] - 5s 95us/step - loss: 0.0913 - acc: 0.9722 - val_loss: 0.0693 - val_acc: 0.9800\n",
+      "54000/54000 [==============================] - 5s 91us/step - loss: 0.0876 - acc: 0.9731 - val_loss: 0.0722 - val_acc: 0.9793\n",
       "Epoch 7/50\n",
-      "54000/54000 [==============================] - 5s 93us/step - loss: 0.0847 - acc: 0.9735 - val_loss: 0.0635 - val_acc: 0.9795\n",
+      "54000/54000 [==============================] - 5s 93us/step - loss: 0.0815 - acc: 0.9743 - val_loss: 0.0594 - val_acc: 0.9825\n",
       "Epoch 8/50\n",
-      "54000/54000 [==============================] - 5s 96us/step - loss: 0.0765 - acc: 0.9766 - val_loss: 0.0674 - val_acc: 0.9807\n",
+      "54000/54000 [==============================] - 5s 101us/step - loss: 0.0744 - acc: 0.9767 - val_loss: 0.0684 - val_acc: 0.9790\n",
       "Epoch 9/50\n",
-      "54000/54000 [==============================] - 5s 98us/step - loss: 0.0760 - acc: 0.9762 - val_loss: 0.0668 - val_acc: 0.9805\n",
+      "54000/54000 [==============================] - 5s 101us/step - loss: 0.0717 - acc: 0.9776 - val_loss: 0.0609 - val_acc: 0.9818\n",
       "Epoch 10/50\n",
-      "54000/54000 [==============================] - 6s 110us/step - loss: 0.0681 - acc: 0.9781 - val_loss: 0.0645 - val_acc: 0.9818\n",
+      "54000/54000 [==============================] - 6s 107us/step - loss: 0.0683 - acc: 0.9784 - val_loss: 0.0645 - val_acc: 0.9815\n",
       "Epoch 11/50\n",
-      "54000/54000 [==============================] - 6s 108us/step - loss: 0.0602 - acc: 0.9816 - val_loss: 0.0713 - val_acc: 0.9800\n",
+      "54000/54000 [==============================] - 6s 107us/step - loss: 0.0617 - acc: 0.9802 - val_loss: 0.0689 - val_acc: 0.9790\n",
       "Epoch 12/50\n",
-      "54000/54000 [==============================] - 5s 102us/step - loss: 0.0613 - acc: 0.9804 - val_loss: 0.0613 - val_acc: 0.9828\n",
+      "54000/54000 [==============================] - 5s 94us/step - loss: 0.0617 - acc: 0.9802 - val_loss: 0.0615 - val_acc: 0.9810\n",
       "Epoch 13/50\n",
-      "54000/54000 [==============================] - 5s 94us/step - loss: 0.0563 - acc: 0.9822 - val_loss: 0.0674 - val_acc: 0.9803\n",
+      "54000/54000 [==============================] - 5s 90us/step - loss: 0.0554 - acc: 0.9831 - val_loss: 0.0702 - val_acc: 0.9822\n",
       "Epoch 14/50\n",
-      "54000/54000 [==============================] - 5s 93us/step - loss: 0.0565 - acc: 0.9820 - val_loss: 0.0753 - val_acc: 0.9785\n",
+      "54000/54000 [==============================] - 5s 91us/step - loss: 0.0542 - acc: 0.9827 - val_loss: 0.0613 - val_acc: 0.9823\n",
       "Epoch 15/50\n",
-      "54000/54000 [==============================] - 5s 95us/step - loss: 0.0543 - acc: 0.9828 - val_loss: 0.0598 - val_acc: 0.9828\n",
+      "54000/54000 [==============================] - 5s 99us/step - loss: 0.0509 - acc: 0.9840 - val_loss: 0.0671 - val_acc: 0.9803\n",
       "Epoch 16/50\n",
-      "54000/54000 [==============================] - 5s 95us/step - loss: 0.0490 - acc: 0.9846 - val_loss: 0.0619 - val_acc: 0.9833\n",
+      "54000/54000 [==============================] - 5s 93us/step - loss: 0.0460 - acc: 0.9855 - val_loss: 0.0692 - val_acc: 0.9827\n",
       "Epoch 17/50\n",
-      "54000/54000 [==============================] - 6s 107us/step - loss: 0.0488 - acc: 0.9848 - val_loss: 0.0665 - val_acc: 0.9825\n",
+      "54000/54000 [==============================] - 5s 91us/step - loss: 0.0490 - acc: 0.9845 - val_loss: 0.0739 - val_acc: 0.9800\n",
       "Epoch 18/50\n",
-      "54000/54000 [==============================] - 5s 93us/step - loss: 0.0487 - acc: 0.9848 - val_loss: 0.0675 - val_acc: 0.9820\n",
+      "54000/54000 [==============================] - 5s 90us/step - loss: 0.0484 - acc: 0.9852 - val_loss: 0.0652 - val_acc: 0.9833\n",
       "Epoch 19/50\n",
-      "54000/54000 [==============================] - 5s 99us/step - loss: 0.0455 - acc: 0.9855 - val_loss: 0.0641 - val_acc: 0.9830\n",
+      "54000/54000 [==============================] - 5s 91us/step - loss: 0.0435 - acc: 0.9866 - val_loss: 0.0733 - val_acc: 0.9807\n",
       "Epoch 20/50\n",
-      "54000/54000 [==============================] - 5s 98us/step - loss: 0.0465 - acc: 0.9857 - val_loss: 0.0620 - val_acc: 0.9823\n",
+      "54000/54000 [==============================] - 5s 91us/step - loss: 0.0429 - acc: 0.9863 - val_loss: 0.0692 - val_acc: 0.9828\n",
       "Epoch 21/50\n",
-      "54000/54000 [==============================] - 5s 96us/step - loss: 0.0440 - acc: 0.9861 - val_loss: 0.0620 - val_acc: 0.9838\n",
+      "54000/54000 [==============================] - 5s 93us/step - loss: 0.0422 - acc: 0.9861 - val_loss: 0.0721 - val_acc: 0.9810\n",
       "Epoch 22/50\n",
-      "54000/54000 [==============================] - 5s 94us/step - loss: 0.0425 - acc: 0.9865 - val_loss: 0.0696 - val_acc: 0.9812\n",
+      "54000/54000 [==============================] - 6s 110us/step - loss: 0.0432 - acc: 0.9857 - val_loss: 0.0702 - val_acc: 0.9827\n",
       "Epoch 23/50\n",
-      "54000/54000 [==============================] - 5s 96us/step - loss: 0.0423 - acc: 0.9867 - val_loss: 0.0609 - val_acc: 0.9828\n",
+      "54000/54000 [==============================] - 6s 108us/step - loss: 0.0386 - acc: 0.9878 - val_loss: 0.0746 - val_acc: 0.9818\n",
       "Epoch 24/50\n",
-      "54000/54000 [==============================] - 5s 100us/step - loss: 0.0396 - acc: 0.9877 - val_loss: 0.0638 - val_acc: 0.9835\n",
+      "54000/54000 [==============================] - 5s 91us/step - loss: 0.0397 - acc: 0.9874 - val_loss: 0.0717 - val_acc: 0.9817\n",
       "Epoch 25/50\n",
-      "54000/54000 [==============================] - 5s 93us/step - loss: 0.0421 - acc: 0.9869 - val_loss: 0.0698 - val_acc: 0.9815\n",
+      "54000/54000 [==============================] - 5s 92us/step - loss: 0.0375 - acc: 0.9886 - val_loss: 0.0688 - val_acc: 0.9822\n",
       "Epoch 26/50\n",
-      "54000/54000 [==============================] - 6s 110us/step - loss: 0.0386 - acc: 0.9879 - val_loss: 0.0747 - val_acc: 0.9813\n",
+      "54000/54000 [==============================] - 5s 94us/step - loss: 0.0389 - acc: 0.9876 - val_loss: 0.0765 - val_acc: 0.9807\n",
       "Epoch 27/50\n",
-      "54000/54000 [==============================] - 5s 93us/step - loss: 0.0372 - acc: 0.9885 - val_loss: 0.0643 - val_acc: 0.9832\n",
+      "54000/54000 [==============================] - 5s 97us/step - loss: 0.0364 - acc: 0.9884 - val_loss: 0.0713 - val_acc: 0.9817\n",
       "Epoch 28/50\n",
-      "54000/54000 [==============================] - 5s 90us/step - loss: 0.0386 - acc: 0.9882 - val_loss: 0.0733 - val_acc: 0.9812\n",
+      "54000/54000 [==============================] - 5s 97us/step - loss: 0.0375 - acc: 0.9881 - val_loss: 0.0760 - val_acc: 0.9793\n",
       "Epoch 29/50\n",
-      "54000/54000 [==============================] - 5s 94us/step - loss: 0.0348 - acc: 0.9893 - val_loss: 0.0672 - val_acc: 0.9847\n",
+      "54000/54000 [==============================] - 5s 96us/step - loss: 0.0351 - acc: 0.9893 - val_loss: 0.0754 - val_acc: 0.9807\n",
       "Epoch 30/50\n",
-      "54000/54000 [==============================] - 5s 94us/step - loss: 0.0345 - acc: 0.9887 - val_loss: 0.0672 - val_acc: 0.9847\n",
+      "54000/54000 [==============================] - 5s 92us/step - loss: 0.0326 - acc: 0.9901 - val_loss: 0.0735 - val_acc: 0.9827\n",
       "Epoch 31/50\n",
-      "54000/54000 [==============================] - 5s 94us/step - loss: 0.0360 - acc: 0.9885 - val_loss: 0.0651 - val_acc: 0.9838\n",
+      "54000/54000 [==============================] - 6s 104us/step - loss: 0.0360 - acc: 0.9889 - val_loss: 0.0733 - val_acc: 0.9803\n",
       "Epoch 32/50\n",
-      "54000/54000 [==============================] - 6s 105us/step - loss: 0.0328 - acc: 0.9901 - val_loss: 0.0646 - val_acc: 0.9845\n",
+      "54000/54000 [==============================] - 7s 130us/step - loss: 0.0326 - acc: 0.9893 - val_loss: 0.0781 - val_acc: 0.9810\n",
       "Epoch 33/50\n",
-      "54000/54000 [==============================] - 5s 93us/step - loss: 0.0344 - acc: 0.9890 - val_loss: 0.0689 - val_acc: 0.9828\n",
+      "54000/54000 [==============================] - 6s 105us/step - loss: 0.0329 - acc: 0.9897 - val_loss: 0.0693 - val_acc: 0.9827\n",
       "Epoch 34/50\n",
-      "54000/54000 [==============================] - 5s 95us/step - loss: 0.0350 - acc: 0.9889 - val_loss: 0.0751 - val_acc: 0.9825\n",
+      "54000/54000 [==============================] - 5s 96us/step - loss: 0.0325 - acc: 0.9894 - val_loss: 0.0743 - val_acc: 0.9812\n",
       "Epoch 35/50\n",
-      "54000/54000 [==============================] - 5s 95us/step - loss: 0.0324 - acc: 0.9897 - val_loss: 0.0704 - val_acc: 0.9823\n",
+      "54000/54000 [==============================] - 5s 99us/step - loss: 0.0323 - acc: 0.9902 - val_loss: 0.0781 - val_acc: 0.9817\n",
       "Epoch 36/50\n",
-      "54000/54000 [==============================] - 5s 97us/step - loss: 0.0321 - acc: 0.9904 - val_loss: 0.0724 - val_acc: 0.9847\n",
+      "54000/54000 [==============================] - 5s 91us/step - loss: 0.0330 - acc: 0.9902 - val_loss: 0.0778 - val_acc: 0.9820\n",
       "Epoch 37/50\n",
-      "54000/54000 [==============================] - 5s 95us/step - loss: 0.0329 - acc: 0.9896 - val_loss: 0.0678 - val_acc: 0.9843\n",
+      "54000/54000 [==============================] - 5s 90us/step - loss: 0.0291 - acc: 0.9908 - val_loss: 0.0777 - val_acc: 0.9817\n",
       "Epoch 38/50\n",
-      "54000/54000 [==============================] - 5s 94us/step - loss: 0.0323 - acc: 0.9905 - val_loss: 0.0721 - val_acc: 0.9832\n",
-      "Epoch 39/50\n",
-      "54000/54000 [==============================] - 5s 97us/step - loss: 0.0291 - acc: 0.9908 - val_loss: 0.0685 - val_acc: 0.9833\n",
-      "Epoch 40/50\n",
-      "54000/54000 [==============================] - 6s 115us/step - loss: 0.0305 - acc: 0.9906 - val_loss: 0.0748 - val_acc: 0.9828\n",
-      "Epoch 41/50\n",
-      "54000/54000 [==============================] - 5s 98us/step - loss: 0.0304 - acc: 0.9904 - val_loss: 0.0656 - val_acc: 0.9852\n",
-      "Epoch 42/50\n",
-      "54000/54000 [==============================] - 5s 99us/step - loss: 0.0333 - acc: 0.9899 - val_loss: 0.0684 - val_acc: 0.9842\n",
-      "Epoch 43/50\n",
-      "54000/54000 [==============================] - 5s 101us/step - loss: 0.0307 - acc: 0.9908 - val_loss: 0.0740 - val_acc: 0.9828\n",
-      "Epoch 44/50\n",
-      "54000/54000 [==============================] - 5s 98us/step - loss: 0.0323 - acc: 0.9903 - val_loss: 0.0744 - val_acc: 0.9818\n",
-      "Epoch 45/50\n",
-      "54000/54000 [==============================] - 5s 93us/step - loss: 0.0263 - acc: 0.9921 - val_loss: 0.0787 - val_acc: 0.9823\n",
-      "Epoch 46/50\n",
-      "54000/54000 [==============================] - 5s 97us/step - loss: 0.0267 - acc: 0.9921 - val_loss: 0.0726 - val_acc: 0.9818\n",
-      "Epoch 47/50\n",
-      "54000/54000 [==============================] - 5s 96us/step - loss: 0.0281 - acc: 0.9907 - val_loss: 0.0764 - val_acc: 0.9813\n",
-      "Epoch 48/50\n",
-      "54000/54000 [==============================] - 5s 94us/step - loss: 0.0293 - acc: 0.9909 - val_loss: 0.0769 - val_acc: 0.9827\n",
-      "Epoch 49/50\n",
-      "54000/54000 [==============================] - 5s 97us/step - loss: 0.0280 - acc: 0.9917 - val_loss: 0.0801 - val_acc: 0.9830\n",
-      "Epoch 50/50\n",
-      "54000/54000 [==============================] - 5s 98us/step - loss: 0.0244 - acc: 0.9925 - val_loss: 0.0806 - val_acc: 0.9823\n"
+      "54000/54000 [==============================] - 5s 89us/step - loss: 0.0320 - acc: 0.9896 - val_loss: 0.0698 - val_acc: 0.9830\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x7fcd7310fba8>"
+       "<keras.callbacks.History at 0x7ff6c4df1c18>"
       ]
      },
      "execution_count": 12,
@@ -420,15 +405,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10000/10000 [==============================] - 1s 98us/step\n",
-      "Final loss: 0.0678, final accuracy: 0.9826\n"
+      "10000/10000 [==============================] - 1s 68us/step\n",
+      "Final loss: 0.0682, final accuracy: 0.9833\n"
      ]
     }
    ],
@@ -439,10 +424,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Final loss: 0.0632, final accuracy: 0.9837 -> relus (0.0085)\n",
+    "#Final loss: 0.0749, final accuracy: 0.9835 -> relu"
+   ]
   }
  ],
  "metadata": {
