--- a/notebooks/keras/conv-net-in-keras.ipynb
+++ b/notebooks/keras/conv-net-in-keras.ipynb
@@ -58,7 +58,7 @@
     "import keras\n",
     "from keras.datasets import mnist\n",
     "from keras.models import Sequential\n",
-    "from keras.layers import Activation, Dense, Dropout, Conv2D, MaxPooling2D, Flatten\n",
+    "from keras.layers import Activation, Dense, Dropout, Conv2D, MaxPooling2D, Flatten, LeakyReLU\n",
     "from keras.callbacks import TensorBoard, ModelCheckpoint, EarlyStopping"
    ]
   },
@@ -134,7 +134,7 @@
     "        self.__name__ = 'relus'\n",
     "\n",
     "def relus(Z):\n",
-    "    e_param = 10**-8\n",
+    "    e_param = 0.0025 # 0.00055 & 0.00045\n",
     "    pi = K.variable((3.14))\n",
     "    m = e_param * (K.sigmoid(K.sin(Z)) - K.sigmoid(K.cos(Z)) * K.exp(K.sqrt(pi)))\n",
     "    A = K.maximum(m, Z)\n",
@@ -205,22 +205,29 @@
     "model = Sequential()\n",
     "\n",
     "model.add(Conv2D(32, 7, padding = 'same', activation ='relus', input_shape = (28, 28, 1)))\n",
+    "# model.add(LeakyReLU())\n",
     "model.add(Conv2D(32, 7, padding = 'same', activation ='relus'))\n",
+    "# model.add(LeakyReLU())\n",
     "model.add(MaxPooling2D(pool_size = (2, 2)))\n",
     "model.add(Dropout(0.20))\n",
     "\n",
     "model.add(Conv2D(64, 3, padding = 'same', activation ='relus'))\n",
+    "# model.add(LeakyReLU())\n",
     "model.add(Conv2D(64, 3, padding = 'same', activation ='relus'))\n",
+    "# model.add(LeakyReLU())\n",
     "model.add(MaxPooling2D(pool_size = (2, 2)))\n",
     "model.add(Dropout(0.30))\n",
     "\n",
     "model.add(Conv2D(128, 2, padding = 'same', activation ='relus'))\n",
+    "# model.add(LeakyReLU())\n",
     "model.add(Conv2D(128, 2, padding = 'same', activation ='relus'))\n",
+    "# model.add(LeakyReLU())\n",
     "model.add(MaxPooling2D(pool_size = (2, 2)))\n",
     "model.add(Dropout(0.40))\n",
     "\n",
     "model.add(Flatten())\n",
     "model.add(Dense(512, activation = \"relus\"))\n",
+    "# model.add(LeakyReLU())\n",
     "model.add(Dropout(0.50))\n",
     "model.add(Dense(10, activation = \"softmax\"))\n",
     "\n",
@@ -284,72 +291,112 @@
      "output_type": "stream",
      "text": [
       "Train on 54000 samples, validate on 6000 samples\n",
-      "Epoch 1/30\n",
-      "54000/54000 [==============================] - 460s 9ms/step - loss: 0.3422 - acc: 0.8860 - val_loss: 0.0561 - val_acc: 0.9837\n",
-      "Epoch 2/30\n",
-      "54000/54000 [==============================] - 453s 8ms/step - loss: 0.0848 - acc: 0.9743 - val_loss: 0.0326 - val_acc: 0.9902\n",
-      "Epoch 3/30\n",
-      "54000/54000 [==============================] - 475s 9ms/step - loss: 0.0623 - acc: 0.9814 - val_loss: 0.0316 - val_acc: 0.9908\n",
-      "Epoch 4/30\n",
-      "54000/54000 [==============================] - 479s 9ms/step - loss: 0.0518 - acc: 0.9842 - val_loss: 0.0268 - val_acc: 0.9928\n",
-      "Epoch 5/30\n",
-      "54000/54000 [==============================] - 478s 9ms/step - loss: 0.0453 - acc: 0.9866 - val_loss: 0.0270 - val_acc: 0.9915\n",
-      "Epoch 6/30\n",
-      "54000/54000 [==============================] - 497s 9ms/step - loss: 0.0396 - acc: 0.9879 - val_loss: 0.0227 - val_acc: 0.9923\n",
-      "Epoch 7/30\n",
-      "54000/54000 [==============================] - 509s 9ms/step - loss: 0.0386 - acc: 0.9882 - val_loss: 0.0242 - val_acc: 0.9927\n",
-      "Epoch 8/30\n",
-      "54000/54000 [==============================] - 503s 9ms/step - loss: 0.0357 - acc: 0.9890 - val_loss: 0.0240 - val_acc: 0.9937\n",
-      "Epoch 9/30\n",
-      "54000/54000 [==============================] - 478s 9ms/step - loss: 0.0321 - acc: 0.9900 - val_loss: 0.0214 - val_acc: 0.9942\n",
-      "Epoch 10/30\n",
-      "54000/54000 [==============================] - 510s 9ms/step - loss: 0.0293 - acc: 0.9909 - val_loss: 0.0245 - val_acc: 0.9928\n",
-      "Epoch 11/30\n",
-      "54000/54000 [==============================] - 507s 9ms/step - loss: 0.0286 - acc: 0.9907 - val_loss: 0.0215 - val_acc: 0.9945\n",
-      "Epoch 12/30\n",
-      "54000/54000 [==============================] - 478s 9ms/step - loss: 0.0282 - acc: 0.9914 - val_loss: 0.0196 - val_acc: 0.9953\n",
-      "Epoch 13/30\n",
-      "54000/54000 [==============================] - 477s 9ms/step - loss: 0.0251 - acc: 0.9920 - val_loss: 0.0219 - val_acc: 0.9945\n",
-      "Epoch 14/30\n",
-      "54000/54000 [==============================] - 497s 9ms/step - loss: 0.0229 - acc: 0.9927 - val_loss: 0.0236 - val_acc: 0.9945\n",
-      "Epoch 15/30\n",
-      "54000/54000 [==============================] - 485s 9ms/step - loss: 0.0262 - acc: 0.9919 - val_loss: 0.0254 - val_acc: 0.9933\n",
-      "Epoch 16/30\n",
-      "54000/54000 [==============================] - 475s 9ms/step - loss: 0.0232 - acc: 0.9925 - val_loss: 0.0241 - val_acc: 0.9930\n",
-      "Epoch 17/30\n",
-      "54000/54000 [==============================] - 437s 8ms/step - loss: 0.0232 - acc: 0.9931 - val_loss: 0.0230 - val_acc: 0.9938\n",
-      "Epoch 18/30\n",
-      "54000/54000 [==============================] - 472s 9ms/step - loss: 0.0214 - acc: 0.9930 - val_loss: 0.0253 - val_acc: 0.9942\n",
-      "Epoch 19/30\n",
-      "54000/54000 [==============================] - 456s 8ms/step - loss: 0.0219 - acc: 0.9931 - val_loss: 0.0292 - val_acc: 0.9928\n",
-      "Epoch 20/30\n",
-      "54000/54000 [==============================] - 451s 8ms/step - loss: 0.0209 - acc: 0.9936 - val_loss: 0.0240 - val_acc: 0.9935\n",
-      "Epoch 21/30\n",
-      "54000/54000 [==============================] - 458s 8ms/step - loss: 0.0222 - acc: 0.9932 - val_loss: 0.0209 - val_acc: 0.9957\n",
-      "Epoch 22/30\n",
-      "54000/54000 [==============================] - 451s 8ms/step - loss: 0.0200 - acc: 0.9935 - val_loss: 0.0203 - val_acc: 0.9952\n",
-      "Epoch 23/30\n",
-      "54000/54000 [==============================] - 431s 8ms/step - loss: 0.0213 - acc: 0.9938 - val_loss: 0.0192 - val_acc: 0.9948\n",
-      "Epoch 24/30\n",
-      "54000/54000 [==============================] - 427s 8ms/step - loss: 0.0178 - acc: 0.9944 - val_loss: 0.0206 - val_acc: 0.9947\n",
-      "Epoch 25/30\n",
-      "54000/54000 [==============================] - 428s 8ms/step - loss: 0.0183 - acc: 0.9944 - val_loss: 0.0239 - val_acc: 0.9950\n",
-      "Epoch 26/30\n",
-      "54000/54000 [==============================] - 427s 8ms/step - loss: 0.0183 - acc: 0.9941 - val_loss: 0.0182 - val_acc: 0.9952\n",
-      "Epoch 27/30\n",
-      "54000/54000 [==============================] - 430s 8ms/step - loss: 0.0187 - acc: 0.9937 - val_loss: 0.0199 - val_acc: 0.9950\n",
-      "Epoch 28/30\n",
-      "54000/54000 [==============================] - 430s 8ms/step - loss: 0.0189 - acc: 0.9943 - val_loss: 0.0217 - val_acc: 0.9940\n",
-      "Epoch 29/30\n",
-      "54000/54000 [==============================] - 430s 8ms/step - loss: 0.0181 - acc: 0.9944 - val_loss: 0.0249 - val_acc: 0.9940\n",
-      "Epoch 30/30\n",
-      "54000/54000 [==============================] - 427s 8ms/step - loss: 0.0198 - acc: 0.9939 - val_loss: 0.0264 - val_acc: 0.9942\n"
+      "Epoch 1/50\n",
+      "54000/54000 [==============================] - 474s 9ms/step - loss: 0.3036 - acc: 0.9011 - val_loss: 0.0502 - val_acc: 0.9843\n",
+      "Epoch 2/50\n",
+      "54000/54000 [==============================] - 477s 9ms/step - loss: 0.0739 - acc: 0.9770 - val_loss: 0.0295 - val_acc: 0.9908\n",
+      "Epoch 3/50\n",
+      "54000/54000 [==============================] - 471s 9ms/step - loss: 0.0515 - acc: 0.9840 - val_loss: 0.0275 - val_acc: 0.9920\n",
+      "Epoch 4/50\n",
+      "54000/54000 [==============================] - 468s 9ms/step - loss: 0.0456 - acc: 0.9864 - val_loss: 0.0259 - val_acc: 0.9932\n",
+      "Epoch 5/50\n",
+      "54000/54000 [==============================] - 524s 10ms/step - loss: 0.0390 - acc: 0.9879 - val_loss: 0.0225 - val_acc: 0.9935\n",
+      "Epoch 6/50\n",
+      "54000/54000 [==============================] - 543s 10ms/step - loss: 0.0340 - acc: 0.9893 - val_loss: 0.0256 - val_acc: 0.9923\n",
+      "Epoch 7/50\n",
+      "54000/54000 [==============================] - 7884s 146ms/step - loss: 0.0331 - acc: 0.9900 - val_loss: 0.0251 - val_acc: 0.9938\n",
+      "Epoch 8/50\n",
+      "54000/54000 [==============================] - 452s 8ms/step - loss: 0.0300 - acc: 0.9907 - val_loss: 0.0238 - val_acc: 0.9937\n",
+      "Epoch 9/50\n",
+      "54000/54000 [==============================] - 456s 8ms/step - loss: 0.0269 - acc: 0.9916 - val_loss: 0.0315 - val_acc: 0.9922\n",
+      "Epoch 10/50\n",
+      "54000/54000 [==============================] - 467s 9ms/step - loss: 0.0264 - acc: 0.9915 - val_loss: 0.0228 - val_acc: 0.9943\n",
+      "Epoch 11/50\n",
+      "54000/54000 [==============================] - 470s 9ms/step - loss: 0.0273 - acc: 0.9911 - val_loss: 0.0246 - val_acc: 0.9935\n",
+      "Epoch 12/50\n",
+      "54000/54000 [==============================] - 483s 9ms/step - loss: 0.0268 - acc: 0.9915 - val_loss: 0.0227 - val_acc: 0.9943\n",
+      "Epoch 13/50\n",
+      "54000/54000 [==============================] - 487s 9ms/step - loss: 0.0237 - acc: 0.9922 - val_loss: 0.0262 - val_acc: 0.9935\n",
+      "Epoch 14/50\n",
+      "54000/54000 [==============================] - 504s 9ms/step - loss: 0.0240 - acc: 0.9926 - val_loss: 0.0207 - val_acc: 0.9953\n",
+      "Epoch 15/50\n",
+      "54000/54000 [==============================] - 516s 10ms/step - loss: 0.0212 - acc: 0.9931 - val_loss: 0.0225 - val_acc: 0.9947\n",
+      "Epoch 16/50\n",
+      "54000/54000 [==============================] - 513s 9ms/step - loss: 0.0209 - acc: 0.9936 - val_loss: 0.0245 - val_acc: 0.9937\n",
+      "Epoch 17/50\n",
+      "54000/54000 [==============================] - 498s 9ms/step - loss: 0.0207 - acc: 0.9933 - val_loss: 0.0231 - val_acc: 0.9943\n",
+      "Epoch 18/50\n",
+      "54000/54000 [==============================] - 485s 9ms/step - loss: 0.0208 - acc: 0.9935 - val_loss: 0.0253 - val_acc: 0.9942\n",
+      "Epoch 19/50\n",
+      "54000/54000 [==============================] - 498s 9ms/step - loss: 0.0197 - acc: 0.9944 - val_loss: 0.0267 - val_acc: 0.9943\n",
+      "Epoch 20/50\n",
+      "54000/54000 [==============================] - 483s 9ms/step - loss: 0.0199 - acc: 0.9937 - val_loss: 0.0229 - val_acc: 0.9942\n",
+      "Epoch 21/50\n",
+      "54000/54000 [==============================] - 476s 9ms/step - loss: 0.0216 - acc: 0.9932 - val_loss: 0.0218 - val_acc: 0.9953\n",
+      "Epoch 22/50\n",
+      "54000/54000 [==============================] - 469s 9ms/step - loss: 0.0183 - acc: 0.9940 - val_loss: 0.0241 - val_acc: 0.9948\n",
+      "Epoch 23/50\n",
+      "54000/54000 [==============================] - 489s 9ms/step - loss: 0.0166 - acc: 0.9945 - val_loss: 0.0287 - val_acc: 0.9940\n",
+      "Epoch 24/50\n",
+      "54000/54000 [==============================] - 469s 9ms/step - loss: 0.0179 - acc: 0.9946 - val_loss: 0.0210 - val_acc: 0.9947\n",
+      "Epoch 25/50\n",
+      "54000/54000 [==============================] - 457s 8ms/step - loss: 0.0187 - acc: 0.9941 - val_loss: 0.0264 - val_acc: 0.9945\n",
+      "Epoch 26/50\n",
+      "54000/54000 [==============================] - 457s 8ms/step - loss: 0.0173 - acc: 0.9947 - val_loss: 0.0254 - val_acc: 0.9948\n",
+      "Epoch 27/50\n",
+      "54000/54000 [==============================] - 467s 9ms/step - loss: 0.0203 - acc: 0.9940 - val_loss: 0.0218 - val_acc: 0.9950\n",
+      "Epoch 28/50\n",
+      "54000/54000 [==============================] - 454s 8ms/step - loss: 0.0186 - acc: 0.9939 - val_loss: 0.0233 - val_acc: 0.9942\n",
+      "Epoch 29/50\n",
+      "54000/54000 [==============================] - 452s 8ms/step - loss: 0.0162 - acc: 0.9946 - val_loss: 0.0238 - val_acc: 0.9940\n",
+      "Epoch 30/50\n",
+      "54000/54000 [==============================] - 452s 8ms/step - loss: 0.0167 - acc: 0.9948 - val_loss: 0.0242 - val_acc: 0.9955\n",
+      "Epoch 31/50\n",
+      "54000/54000 [==============================] - 457s 8ms/step - loss: 0.0168 - acc: 0.9946 - val_loss: 0.0250 - val_acc: 0.9950\n",
+      "Epoch 32/50\n",
+      "54000/54000 [==============================] - 463s 9ms/step - loss: 0.0195 - acc: 0.9940 - val_loss: 0.0292 - val_acc: 0.9935\n",
+      "Epoch 33/50\n",
+      "54000/54000 [==============================] - 514s 10ms/step - loss: 0.0203 - acc: 0.9938 - val_loss: 0.0227 - val_acc: 0.9940\n",
+      "Epoch 34/50\n",
+      "54000/54000 [==============================] - 499s 9ms/step - loss: 0.0188 - acc: 0.9941 - val_loss: 0.0239 - val_acc: 0.9942\n",
+      "Epoch 35/50\n",
+      "54000/54000 [==============================] - 461s 9ms/step - loss: 0.0197 - acc: 0.9937 - val_loss: 0.0234 - val_acc: 0.9952\n",
+      "Epoch 36/50\n",
+      "54000/54000 [==============================] - 452s 8ms/step - loss: 0.0162 - acc: 0.9949 - val_loss: 0.0219 - val_acc: 0.9947\n",
+      "Epoch 37/50\n",
+      "54000/54000 [==============================] - 451s 8ms/step - loss: 0.0180 - acc: 0.9946 - val_loss: 0.0241 - val_acc: 0.9952\n",
+      "Epoch 38/50\n",
+      "54000/54000 [==============================] - 451s 8ms/step - loss: 0.0194 - acc: 0.9941 - val_loss: 0.0278 - val_acc: 0.9937\n",
+      "Epoch 39/50\n",
+      "54000/54000 [==============================] - 451s 8ms/step - loss: 0.0177 - acc: 0.9946 - val_loss: 0.0216 - val_acc: 0.9953\n",
+      "Epoch 40/50\n",
+      "54000/54000 [==============================] - 451s 8ms/step - loss: 0.0142 - acc: 0.9958 - val_loss: 0.0264 - val_acc: 0.9943\n",
+      "Epoch 41/50\n",
+      "54000/54000 [==============================] - 451s 8ms/step - loss: 0.0163 - acc: 0.9953 - val_loss: 0.0253 - val_acc: 0.9947\n",
+      "Epoch 42/50\n",
+      "54000/54000 [==============================] - 451s 8ms/step - loss: 0.0152 - acc: 0.9957 - val_loss: 0.0267 - val_acc: 0.9950\n",
+      "Epoch 43/50\n",
+      "54000/54000 [==============================] - 451s 8ms/step - loss: 0.0198 - acc: 0.9944 - val_loss: 0.0279 - val_acc: 0.9933\n",
+      "Epoch 44/50\n",
+      "54000/54000 [==============================] - 453s 8ms/step - loss: 0.0189 - acc: 0.9941 - val_loss: 0.0259 - val_acc: 0.9940\n",
+      "Epoch 45/50\n",
+      "54000/54000 [==============================] - 451s 8ms/step - loss: 0.0187 - acc: 0.9944 - val_loss: 0.0237 - val_acc: 0.9950\n",
+      "Epoch 46/50\n",
+      "54000/54000 [==============================] - 451s 8ms/step - loss: 0.0177 - acc: 0.9947 - val_loss: 0.0234 - val_acc: 0.9958\n",
+      "Epoch 47/50\n",
+      "54000/54000 [==============================] - 452s 8ms/step - loss: 0.0187 - acc: 0.9945 - val_loss: 0.0248 - val_acc: 0.9950\n",
+      "Epoch 48/50\n",
+      "54000/54000 [==============================] - 452s 8ms/step - loss: 0.0153 - acc: 0.9957 - val_loss: 0.0228 - val_acc: 0.9955\n",
+      "Epoch 49/50\n",
+      "54000/54000 [==============================] - 452s 8ms/step - loss: 0.0207 - acc: 0.9940 - val_loss: 0.0204 - val_acc: 0.9958\n",
+      "Epoch 50/50\n",
+      "54000/54000 [==============================] - 452s 8ms/step - loss: 0.0158 - acc: 0.9956 - val_loss: 0.0266 - val_acc: 0.9945\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x7f1813c63f98>"
+       "<keras.callbacks.History at 0x7f5d3efc8f98>"
       ]
      },
      "execution_count": 10,
@@ -358,7 +405,7 @@
     }
    ],
    "source": [
-    "model.fit(X_train, y_train, batch_size = 128, epochs = 30, verbose = 1,\n",
+    "model.fit(X_train, y_train, batch_size = 128, epochs = 50, verbose = 1,\n",
     "          validation_split = 0.1, callbacks=[modelCheckpoint, earlyStopping, tensorboard])"
    ]
   },
@@ -404,8 +451,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10000/10000 [==============================] - 30s 3ms/step\n",
-      "Final loss: 0.0183, final accuracy: 0.9946\n"
+      "10000/10000 [==============================] - 33s 3ms/step\n",
+      "Final loss: 0.0208, final accuracy: 0.9956\n"
      ]
     }
    ],
@@ -420,7 +467,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Final loss: 0.0204, final accuracy: 0.9940 (e = 0.001)"
+    "#Final loss: 0.0208, final accuracy: 0.9956 (e = 0.0025)\n",
+    "#Final loss: 0.0147, final accuracy: 0.9954 (e = 10**-7)\n",
+    "#Final loss: 0.0172, final accuracy: 0.9948 (e = 0.00045)\n",
+    "#Final loss: 0.0198, final accuracy: 0.9942 - ReLU"
    ]
   }
  ],
