Rename notebooks to highlight the use of the SineReLU from Keras-Contrib.

--- a/notebooks/ekholabs/kaggle-iceberg-challenge-ResNet-ReLU.ipynb
+++ b/notebooks/ekholabs/kaggle-iceberg-challenge-ResNet-ReLU.ipynb
@@ -229,17 +229,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
+    "\n",
     "from keras import backend as K\n",
+    "from keras.engine import Layer\n",
     "from keras.utils.generic_utils import get_custom_objects\n",
     "\n",
-    "def relus(Z):\n",
-    "    e_param = 0.001\n",
-    "    pi = K.variable((3.14))\n",
-    "    m = e_param + (K.sigmoid(K.sin(Z)) - K.sigmoid(K.cos(Z)) * K.exp(K.sqrt(pi)))\n",
-    "    A = K.maximum(m, Z)\n",
-    "    return A\n",
+    "class SineReLU(Layer):\n",
     "\n",
-    "get_custom_objects().update({'ReLU_s': Activation(relus)})"
+    "    def __init__(self, epsilon=0.0055, **kwargs):\n",
+    "        super(SineReLU, self).__init__(**kwargs)\n",
+    "        self.supports_masking = True\n",
+    "        self.epsilon = K.cast_to_floatx(epsilon)\n",
+    "\n",
+    "    def build(self, input_shape):\n",
+    "        self.scale = np.exp(np.sqrt(np.pi))\n",
+    "        super(SineReLU, self).build(input_shape)\n",
+    "\n",
+    "    def call(self, Z):\n",
+    "        m = self.epsilon * (K.sigmoid(K.sin(Z)) - K.sigmoid(K.cos(Z)) * self.scale)\n",
+    "        A = K.maximum(m, Z)\n",
+    "        return A\n",
+    "\n",
+    "    def get_config(self):\n",
+    "        config = {'epsilon': float(self.epsilon)}\n",
+    "        base_config = super(SineReLU, self).get_config()\n",
+    "        return dict(list(base_config.items()) + list(config.items()))\n",
+    "\n",
+    "    def compute_output_shape(self, input_shape):\n",
+    "        return input_shape"
    ]
   },
   {
@@ -497,7 +515,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
