--- a/notebooks/ekholabs/bi-lstm_net_SineReLU_toxicity.ipynb
+++ b/notebooks/ekholabs/bi-lstm_net_SineReLU_toxicity.ipynb
@@ -20,6 +20,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
     "import keras\n",
     "from keras.datasets import imdb\n",
     "from keras.preprocessing.sequence import pad_sequences\n",
@@ -30,15 +31,15 @@
     "from keras.layers import Embedding, Conv1D, SpatialDropout1D, GlobalMaxPool1D, LSTM\n",
     "from keras.layers.wrappers import Bidirectional\n",
     "from keras.callbacks import ModelCheckpoint, EarlyStopping\n",
-    "import os\n",
+    "\n",
+    "from keras_contrib.layers.advanced_activations import SineReLU\n",
+    "\n",
     "from sklearn.metrics import roc_auc_score\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
     "import numpy as np\n",
     "\n",
     "import pandas as pd\n",
-    "\n",
-    "import os\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline"
@@ -140,38 +141,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Custom Activiation Function"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from keras import backend as K\n",
-    "from keras.utils.generic_utils import get_custom_objects\n",
-    "\n",
-    "class ReLUs(Activation):\n",
-    "    \n",
-    "    def __init__(self, activation, **kwargs):\n",
-    "        super(ReLUs, self).__init__(activation, **kwargs)\n",
-    "        self.__name__ = 'ReLU_s'\n",
-    "\n",
-    "def relus(Z):\n",
-    "    e_param = 1.8\n",
-    "    pi = K.variable((3.14))\n",
-    "    m = e_param + (K.sigmoid(K.sin(Z)) - K.sigmoid(K.cos(Z)) * K.exp(K.sqrt(pi)))\n",
-    "    A = K.maximum(m, Z)\n",
-    "    return A\n",
-    "\n",
-    "get_custom_objects().update({'ReLU_s': ReLUs(relus)})"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "#### Design Deep Net Architecture"
    ]
   },
@@ -181,6 +150,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "epsilon = 0.0083\n",
+    "\n",
     "input_layer = Input(shape=(max_review_length,), dtype='int16', name='input')\n",
     "embedding_layer = Embedding(n_unique_words, n_dim, input_length=max_review_length,\n",
     "                            name='embedding_1')(input_layer)\n",
@@ -192,9 +163,10 @@
     "\n",
     "concat = concatenate([bi_lstm_1, bi_lstm_2])\n",
     "\n",
-    "densor = Dense(64, activation=\"relu\")(concat)\n",
+    "densor = Dense(64)(concat)\n",
+    "activation = SineReLU(epsilon)(densor)\n",
     "\n",
-    "flat = Flatten()(densor)\n",
+    "flat = Flatten()(activation)\n",
     "\n",
     "output = Dense(n_classes, activation='softmax', name='output')(flat)\n",
     "\n",
