--- a/notebooks/ekholabs/kaggle-mnist-challenge-cnn-SineReLU.ipynb
+++ b/notebooks/ekholabs/kaggle-mnist-challenge-cnn-SineReLU.ipynb
@@ -46,12 +46,14 @@
    "source": [
     "import keras\n",
     "from keras.datasets import mnist\n",
-    "from keras.models import Sequential\n",
-    "from keras.layers import Dense, Dropout\n",
-    "from keras.layers import Flatten, MaxPooling2D, Conv2D, Activation\n",
+    "from keras.models import Model, Sequential\n",
+    "from keras.layers import Input, Add, Dense, Dropout\n",
+    "from keras.layers import Flatten, AveragePooling2D, MaxPooling2D, Conv2D, Activation, ZeroPadding2D\n",
     "from keras.layers.normalization import BatchNormalization\n",
     "from keras.preprocessing.image import ImageDataGenerator\n",
     "from keras.callbacks import TensorBoard, LearningRateScheduler, ModelCheckpoint, EarlyStopping\n",
+    "\n",
+    "from keras_contrib.layers.advanced_activations import SineReLU\n",
     "\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
@@ -76,28 +78,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "outputdir = 'model_output/cnn_ReLUs'\n",
     "n_classes = 10\n",
     "\n",
     "raw_data = np.loadtxt('kaggle/datasets/mnist/train.csv', skiprows=1, dtype='int', delimiter=',')\n",
     "X_train, X_val, y_train, y_val = train_test_split(\n",
-    "    raw_data[:,1:], raw_data[:,0], test_size = 0.1)\n",
+    "    raw_data[:,1:], raw_data[:,0], test_size = 0.2)\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X_train, y_train, test_size=0.2)\n",
     "\n",
     "X_train = X_train.reshape(-1, 28, 28, 1)\n",
     "X_val = X_val.reshape(-1, 28, 28, 1)\n",
+    "X_test = X_test.reshape(-1, 28, 28, 1)\n",
     "\n",
     "X_train = X_train.astype(\"float32\")/255.\n",
     "X_val = X_val.astype(\"float32\")/255.\n",
+    "X_test = X_test.astype(\"float32\")/255.\n",
+    "\n",
     "\n",
     "y_train = keras.utils.to_categorical(y_train, n_classes)\n",
-    "y_val = keras.utils.to_categorical(y_val, n_classes)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Define Custom Activation Function"
+    "y_val = keras.utils.to_categorical(y_val, n_classes)\n",
+    "y_test = keras.utils.to_categorical(y_test, n_classes)\n"
    ]
   },
   {
@@ -106,23 +106,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from keras import backend as K\n",
-    "from keras.utils.generic_utils import get_custom_objects\n",
-    "\n",
-    "class ReLUs(Activation):\n",
-    "    \n",
-    "    def __init__(self, activation, **kwargs):\n",
-    "        super(ReLUs, self).__init__(activation, **kwargs)\n",
-    "        self.__name__ = 'ReLU_s'\n",
-    "\n",
-    "def relus(Z):\n",
-    "    e_param = 0.005\n",
-    "    pi = K.variable((3.14))\n",
-    "    m = e_param * (K.sigmoid(K.sin(Z)) - K.sigmoid(K.cos(Z)) * K.exp(K.sqrt(pi)))\n",
-    "    A = K.maximum(m, Z)\n",
-    "    return A\n",
-    "\n",
-    "get_custom_objects().update({'ReLU_s': ReLUs(relus)})"
+    "output_dir = 'model_output/multi-conv'"
    ]
   },
   {
@@ -138,26 +122,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "epsilon = 0.0025\n",
+    "\n",
     "model = Sequential()\n",
     "\n",
-    "model.add(Conv2D(28, 7, padding = 'same', activation ='ReLU_s', input_shape = (28, 28, 1)))\n",
-    "model.add(Conv2D(28, 7, padding = 'same', activation ='ReLU_s'))\n",
+    "model.add(Conv2D(28, 7, padding = 'same', input_shape = (28, 28, 1)))\n",
+    "model.add(SineReLU(epsilon))\n",
+    "model.add(Conv2D(28, 7, padding = 'same'))\n",
+    "model.add(SineReLU(epsilon))\n",
     "model.add(MaxPooling2D(pool_size = (2, 2)))\n",
     "model.add(Dropout(0.25))\n",
     "\n",
-    "model.add(Conv2D(32, 3, padding = 'same', activation ='ReLU_s'))\n",
-    "model.add(Conv2D(32, 3, padding = 'same', activation ='ReLU_s'))\n",
+    "model.add(Conv2D(32, 3, padding = 'same'))\n",
+    "model.add(SineReLU(epsilon))\n",
+    "model.add(Conv2D(32, 3, padding = 'same'))\n",
+    "model.add(SineReLU(epsilon))\n",
     "model.add(MaxPooling2D(pool_size = (2, 2)))\n",
     "model.add(Dropout(0.25))\n",
     "\n",
-    "model.add(Conv2D(44, 2, padding = 'same', activation ='ReLU_s'))\n",
-    "model.add(Conv2D(44, 2, padding = 'same', activation ='ReLU_s'))\n",
-    "model.add(Conv2D(48, 2, activation ='ReLU_s'))\n",
+    "model.add(Conv2D(44, 2, padding = 'same'))\n",
+    "model.add(SineReLU(epsilon))\n",
+    "model.add(Conv2D(44, 2, padding = 'same'))\n",
+    "model.add(SineReLU(epsilon))\n",
+    "model.add(Conv2D(48, 2))\n",
+    "model.add(SineReLU(epsilon))\n",
     "model.add(MaxPooling2D(pool_size = (2, 2)))\n",
     "model.add(Dropout(0.25))\n",
     "\n",
     "model.add(Flatten())\n",
-    "model.add(Dense(1024, activation = \"ReLU_s\"))\n",
+    "model.add(Dense(1024))\n",
+    "model.add(SineReLU(epsilon))\n",
     "model.add(Dropout(0.25))\n",
     "model.add(Dense(10, activation = \"softmax\"))"
    ]
@@ -219,6 +213,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Save the Best"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "modelCheckpoint = ModelCheckpoint(monitor='val_acc', filepath=output_dir+'/weights-cnn-mnist.hdf5', save_best_only=True, mode='max')\n",
+    "earlyStopping = EarlyStopping(monitor='val_acc', mode='max', patience=3)\n",
+    "\n",
+    "if not os.path.exists(output_dir):\n",
+    "    os.makedirs(output_dir)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Configure model"
    ]
   },
@@ -228,15 +242,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.compile(loss = 'categorical_crossentropy', optimizer = 'adam', metrics = ['accuracy'])\n",
-    "\n",
-    "modelCheckpoint = ModelCheckpoint(monitor='val_acc', filepath=outputdir + '/weights-cnn-mnist.hdf5',\n",
-    "                                               save_best_only=True, mode='max')\n",
-    "earlyStopping = EarlyStopping(monitor='val_acc', mode='max', patience=10)\n",
-    "\n",
-    "\n",
-    "if not os.path.exists(outputdir):\n",
-    "    os.makedirs(outputdir)"
+    "model.compile(loss = 'categorical_crossentropy', optimizer = 'adam', metrics = ['accuracy'])"
    ]
   },
   {
@@ -252,7 +258,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tensorboard = TensorBoard(\"../logs/lenet-cnn-mnist-ReLUs-40-epochs-batch-64-EkhoNet8-data-augmentation\")"
+    "tensorboard = TensorBoard(\"../logs/cnn-mnist-ReLUs-30-epochs-EkhoNet8-data-augmentation\")"
    ]
   },
   {
@@ -269,12 +275,12 @@
    "outputs": [],
    "source": [
     "hist = model.fit_generator(train_generator,\n",
-    "                           steps_per_epoch = 3000,\n",
-    "                           epochs = 40,\n",
+    "                           steps_per_epoch = 3500,\n",
+    "                           epochs = 15,\n",
     "                           verbose = 1,\n",
     "                           validation_data = validation_generator,\n",
-    "                           validation_steps = 1500,\n",
-    "                           callbacks = [modelCheckpoint, earlyStopping])#, tensorboard])\n",
+    "                           validation_steps = 3500,\n",
+    "                           callbacks = [modelCheckpoint, earlyStopping])#, annealer, tensorboard])\n",
     "\n",
     "# hist = model.fit(X_train, y_train, batch_size = 32,\n",
     "#                            epochs = 40,\n",
@@ -297,7 +303,7 @@
    "outputs": [],
    "source": [
     "# Zero indexed -> get the epoch with highest accuracy.\n",
-    "saved_model = keras.models.load_model(outputdir + '/weights-cnn-mnist.hdf5')"
+    "saved_model = keras.models.load_model(output_dir + '/weights-cnn-mnist.hdf5')"
    ]
   },
   {
@@ -313,7 +319,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "final_loss, final_acc = saved_model.evaluate(X_val, y_val, verbose = 1)\n",
+    "final_loss, final_acc = saved_model.evaluate(X_test, y_test, verbose = 1)\n",
     "print(\"Final loss: {0:.4f}, final accuracy: {1:.4f}\".format(final_loss, final_acc))"
    ]
   },
@@ -330,10 +336,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_test = np.loadtxt('kaggle/datasets/mnist/test.csv', skiprows=1, dtype='int', delimiter=',')\n",
-    "X_test = X_test.reshape(28000, 28, 28, 1).astype('float32') / 255.\n",
+    "X_test_sub = np.loadtxt('kaggle/datasets/mnist/test.csv', skiprows=1, dtype='int', delimiter=',')\n",
+    "X_test_sub = X_test_sub.reshape(28000, 28, 28, 1).astype('float32') / 255.\n",
     "\n",
-    "predictions = saved_model.predict(X_test, verbose = 2)\n",
+    "predictions = model.predict(X_test_sub, verbose = 2)\n",
     "predictions = np.argmax(predictions, axis = 1)\n",
     "\n",
     "pd.DataFrame({\"ImageId\": list(range(1, len(predictions) + 1)), \"Label\": predictions}).to_csv('kaggle/results/mnist/submission-ReLUs-30-epochs-EkhoNet8-data-augmentation.csv', index = False, header = True)"
