--- a/notebooks/ekholabs/multi-conv_net_SineReLU_toxicity.ipynb
+++ b/notebooks/ekholabs/multi-conv_net_SineReLU_toxicity.ipynb
@@ -20,6 +20,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "\n",
     "import keras\n",
     "from keras.datasets import imdb\n",
     "from keras.preprocessing.sequence import pad_sequences\n",
@@ -30,15 +32,15 @@
     "from keras.layers import Embedding, Conv1D, SpatialDropout1D, GlobalMaxPool1D, LSTM\n",
     "from keras.layers.wrappers import Bidirectional\n",
     "from keras.callbacks import ModelCheckpoint, EarlyStopping\n",
-    "import os\n",
+    "\n",
+    "from keras_contrib.layers.advanced_activations import SineReLU\n",
+    "\n",
     "from sklearn.metrics import roc_auc_score\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
     "import numpy as np\n",
     "\n",
     "import pandas as pd\n",
-    "\n",
-    "import os\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline"
@@ -150,38 +152,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Custom Activiation Function"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from keras import backend as K\n",
-    "from keras.utils.generic_utils import get_custom_objects\n",
-    "\n",
-    "class ReLUs(Activation):\n",
-    "    \n",
-    "    def __init__(self, activation, **kwargs):\n",
-    "        super(ReLUs, self).__init__(activation, **kwargs)\n",
-    "        self.__name__ = 'ReLU_s'\n",
-    "\n",
-    "def relus(Z):\n",
-    "    e = e_param\n",
-    "    pi = K.variable((3.14))\n",
-    "    m = e * (K.sigmoid(K.sin(Z)) - (K.sigmoid(K.cos(Z)) * K.exp(K.sqrt(pi))))\n",
-    "    A = K.maximum(m, Z)\n",
-    "    return A\n",
-    "\n",
-    "get_custom_objects().update({'ReLU_s': ReLUs(relus)})"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "#### Design Deep Net Architecture"
    ]
   },
@@ -191,31 +161,44 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "cnn_epsilon = 0.0025\n",
+    "dense_epsilon = 0.0083\n",
+    "\n",
     "input_layer = Input(shape=(max_review_length,), dtype='int16', name='input')\n",
     "\n",
     "embedding_layer = Embedding(n_unique_words, n_dim, input_length=max_review_length, name='embedding_1')(input_layer)\n",
     "\n",
-    "conv_1 = Conv1D(n_conv_1, k_conv_1, activation='ReLU_s', name='conv_1')(embedding_layer)\n",
-    "maxp_1 = GlobalMaxPool1D(name='maxp_1')(conv_1)\n",
+    "conv_1 = Conv1D(n_conv_1, k_conv_1, name='conv_1')(embedding_layer)\n",
+    "act1 = SineReLU(cnn_epsilon)(conv_1)\n",
+    "\n",
+    "maxp_1 = GlobalMaxPool1D(name='maxp_1')(act1)\n",
     "drop_1 = Dropout(drop_conv)(maxp_1)\n",
     "norm_1 = BatchNormalization()(drop_1)\n",
     "\n",
-    "conv_2 = Conv1D(n_conv_2, k_conv_2, activation='ReLU_s', name='conv_2')(embedding_layer)\n",
-    "maxp_2 = GlobalMaxPool1D(name='maxp_2')(conv_2)\n",
+    "conv_2 = Conv1D(n_conv_2, k_conv_2 name='conv_2')(embedding_layer)\n",
+    "act2 = SineReLU(cnn_epsilon)(conv_2)\n",
+    "\n",
+    "maxp_2 = GlobalMaxPool1D(name='maxp_2')(act2)\n",
     "drop_2 = Dropout(drop_conv)(maxp_2)\n",
     "norm_2 = BatchNormalization()(drop_2)\n",
     "\n",
-    "conv_3 = Conv1D(n_conv_3, k_conv_3, activation='ReLU_s', name='conv_3')(embedding_layer)\n",
-    "maxp_3 = GlobalMaxPool1D(name='maxp_3')(conv_3)\n",
+    "conv_3 = Conv1D(n_conv_3, k_conv_3 name='conv_3')(embedding_layer)\n",
+    "act3 = SineReLU(cnn_epsilon)(conv_3)\n",
+    "\n",
+    "maxp_3 = GlobalMaxPool1D(name='maxp_3')(act3)\n",
     "drop_3 = Dropout(drop_conv)(maxp_3)\n",
     "norm_3 = BatchNormalization()(drop_3)\n",
     "\n",
     "concat = concatenate([norm_1, norm_2, norm_3])\n",
     "\n",
-    "dense_layer_1 = Dense(n_dense, activation='ReLU_s', name='dense_1')(concat)\n",
-    "drop_dense_layer_1 = Dropout(dropout, name='drop_dense_1')(dense_layer_1)\n",
-    "dense_layer_2 = Dense(n_dense, activation='ReLU_s', name='dense_2')(drop_dense_layer_1)\n",
-    "drop_dense_layer_2 = Dropout(dropout, name='drop_dense_2')(dense_layer_2)\n",
+    "dense_layer_1 = Dense(n_dense, name='dense_1')(concat)\n",
+    "act4 = SineReLU(dense_epsilon)(dense_layer_1)\n",
+    "drop_dense_layer_1 = Dropout(dropout, name='drop_dense_1')(act4)\n",
+    "\n",
+    "dense_layer_2 = Dense(n_dense, name='dense_2')(drop_dense_layer_1)\n",
+    "act5 = SineReLU(dense_epsilon)(dense_layer_2)\n",
+    "\n",
+    "drop_dense_layer_2 = Dropout(dropout, name='drop_dense_2')(act5)\n",
     "\n",
     "predictions = Dense(n_classes, activation='sigmoid', name='output')(drop_dense_layer_2)\n",
     "\n",
