--- a/notebooks/keras/conv-net-in-keras.ipynb
+++ b/notebooks/keras/conv-net-in-keras.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,16 +40,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/lib/python3.6/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "  from ._conv import register_converters as _register_converters\n",
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import keras\n",
     "from keras.datasets import mnist\n",
     "from keras.models import Sequential\n",
-    "from keras.layers import Activation, Dense, Dropout, Conv2D, MaxPooling2D, Flatten, LeakyReLU\n",
-    "from keras.callbacks import TensorBoard, ModelCheckpoint, EarlyStopping"
+    "from keras.layers import Activation, Dense, Dropout, Conv2D, MaxPooling2D, Flatten, LeakyReLU, BatchNormalization\n",
+    "from keras.callbacks import TensorBoard, ModelCheckpoint, EarlyStopping\n",
+    "\n",
+    "from keras_contrib.layers.advanced_activations import SineReLU"
    ]
   },
   {
@@ -61,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,60 +117,76 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### ReLUs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "\n",
-    "from keras import backend as K\n",
-    "from keras.engine import Layer\n",
-    "from keras.utils.generic_utils import get_custom_objects\n",
-    "\n",
-    "class SineReLU(Layer):\n",
-    "\n",
-    "    def __init__(self, epsilon=0.0083, **kwargs):\n",
-    "        super(SineReLU, self).__init__(**kwargs)\n",
-    "        self.supports_masking = True\n",
-    "        self.epsilon = K.cast_to_floatx(epsilon)\n",
-    "\n",
-    "    def build(self, input_shape):\n",
-    "        self.scale = np.exp(np.sqrt(np.pi))\n",
-    "        super(SineReLU, self).build(input_shape)\n",
-    "\n",
-    "    def call(self, Z):\n",
-    "        m = self.epsilon * (K.sigmoid(K.sin(Z)) - K.sigmoid(K.cos(Z)) * self.scale)\n",
-    "        A = K.maximum(m, Z)\n",
-    "        return A\n",
-    "\n",
-    "    def get_config(self):\n",
-    "        config = {'epsilon': float(self.epsilon)}\n",
-    "        base_config = super(SineReLU, self).get_config()\n",
-    "        return dict(list(base_config.items()) + list(config.items()))\n",
-    "\n",
-    "    def compute_output_shape(self, input_shape):\n",
-    "        return input_shape"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "#### Design Neural Network architecture"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "conv2d_1 (Conv2D)            (None, 28, 28, 32)        1600      \n",
+      "_________________________________________________________________\n",
+      "sine_re_lu_1 (SineReLU)      (None, 28, 28, 32)        0         \n",
+      "_________________________________________________________________\n",
+      "conv2d_2 (Conv2D)            (None, 28, 28, 32)        50208     \n",
+      "_________________________________________________________________\n",
+      "sine_re_lu_2 (SineReLU)      (None, 28, 28, 32)        0         \n",
+      "_________________________________________________________________\n",
+      "max_pooling2d_1 (MaxPooling2 (None, 14, 14, 32)        0         \n",
+      "_________________________________________________________________\n",
+      "dropout_1 (Dropout)          (None, 14, 14, 32)        0         \n",
+      "_________________________________________________________________\n",
+      "conv2d_3 (Conv2D)            (None, 14, 14, 64)        18496     \n",
+      "_________________________________________________________________\n",
+      "sine_re_lu_3 (SineReLU)      (None, 14, 14, 64)        0         \n",
+      "_________________________________________________________________\n",
+      "conv2d_4 (Conv2D)            (None, 14, 14, 64)        36928     \n",
+      "_________________________________________________________________\n",
+      "sine_re_lu_4 (SineReLU)      (None, 14, 14, 64)        0         \n",
+      "_________________________________________________________________\n",
+      "max_pooling2d_2 (MaxPooling2 (None, 7, 7, 64)          0         \n",
+      "_________________________________________________________________\n",
+      "dropout_2 (Dropout)          (None, 7, 7, 64)          0         \n",
+      "_________________________________________________________________\n",
+      "conv2d_5 (Conv2D)            (None, 7, 7, 128)         32896     \n",
+      "_________________________________________________________________\n",
+      "sine_re_lu_5 (SineReLU)      (None, 7, 7, 128)         0         \n",
+      "_________________________________________________________________\n",
+      "conv2d_6 (Conv2D)            (None, 7, 7, 128)         65664     \n",
+      "_________________________________________________________________\n",
+      "sine_re_lu_6 (SineReLU)      (None, 7, 7, 128)         0         \n",
+      "_________________________________________________________________\n",
+      "max_pooling2d_3 (MaxPooling2 (None, 3, 3, 128)         0         \n",
+      "_________________________________________________________________\n",
+      "dropout_3 (Dropout)          (None, 3, 3, 128)         0         \n",
+      "_________________________________________________________________\n",
+      "flatten_1 (Flatten)          (None, 1152)              0         \n",
+      "_________________________________________________________________\n",
+      "dense_1 (Dense)              (None, 512)               590336    \n",
+      "_________________________________________________________________\n",
+      "sine_re_lu_7 (SineReLU)      (None, 512)               0         \n",
+      "_________________________________________________________________\n",
+      "dropout_4 (Dropout)          (None, 512)               0         \n",
+      "_________________________________________________________________\n",
+      "dense_2 (Dense)              (None, 10)                5130      \n",
+      "=================================================================\n",
+      "Total params: 801,258\n",
+      "Trainable params: 801,258\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
    "source": [
-    "epsilon_cnn = 0.0035\n",
+    "epsilon_cnn = 0.0045\n",
     "epsilon_dense = 0.0083\n",
     "\n",
     "model = Sequential()\n",
@@ -206,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +246,7 @@
     "if not os.path.exists('model_output'):\n",
     "    os.makedirs('model_output')\n",
     "\n",
-    "tensorboard = TensorBoard(\"../logs/convnet-mnist-native-relus-VII\")"
+    "tensorboard = TensorBoard(\"../logs/convnet-mnist-native-relus-III\")"
    ]
   },
   {
@@ -230,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +276,25 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train on 54000 samples, validate on 6000 samples\n",
+      "Epoch 1/50\n",
+      "54000/54000 [==============================] - 535s 10ms/step - loss: 0.2799 - acc: 0.9077 - val_loss: 0.0431 - val_acc: 0.9863\n",
+      "Epoch 2/50\n",
+      "54000/54000 [==============================] - 530s 10ms/step - loss: 0.0705 - acc: 0.9781 - val_loss: 0.0306 - val_acc: 0.9910\n",
+      "Epoch 3/50\n",
+      "54000/54000 [==============================] - 542s 10ms/step - loss: 0.0519 - acc: 0.9838 - val_loss: 0.0287 - val_acc: 0.9912\n",
+      "Epoch 4/50\n",
+      "54000/54000 [==============================] - 528s 10ms/step - loss: 0.0441 - acc: 0.9867 - val_loss: 0.0240 - val_acc: 0.9938\n",
+      "Epoch 5/50\n",
+      "10624/54000 [====>.........................] - ETA: 6:35 - loss: 0.0357 - acc: 0.9876"
+     ]
+    }
+   ],
    "source": [
     "history = model.fit(X_train, y_train, batch_size = 128, epochs = 50, verbose = 1,\n",
     "          validation_split = 0.1, callbacks=[modelCheckpoint, earlyStopping, tensorboard])"
@@ -267,7 +313,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "saved_model = keras.models.load_model('model_output/weights-cnn-mnist.hdf5', custom_objects={'SineReLU': SineReLU})\n",
+    "saved_model = keras.models.load_model('model_output/weights-cnn-mnist.hdf5')\n",
     "predictions = saved_model.predict_classes(X_test, verbose = 2)\n",
     "np.std(history.history['loss'])"
    ]
