Keep latest run output with ReLU.

--- a/notebooks/ekholabs/kaggle-iceberg-challenge-cnn-relu.ipynb
+++ b/notebooks/ekholabs/kaggle-iceberg-challenge-cnn-relu.ipynb
@@ -243,7 +243,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tensorboard = TensorBoard(\"../logs/cnn-iceberg-relu-20-epochs-batch-16-augmentation\")"
+    "tensorboard = TensorBoard(\"../logs/cnn-iceberg-ReLU-I\")"
    ]
   },
   {
@@ -319,7 +319,7 @@
     "                           epochs = 10,\n",
     "                           verbose = 1,\n",
     "                           validation_data = validation_generator,\n",
-    "                           validation_steps = 400https://www.glassdoor.nl/Reviews/Trifork-Reviews-E486173.htm?countryRedirect=true)\n",
+    "                           validation_steps = 400)\n",
     "#                            callbacks = [tensorboard])\n",
     "\n",
     "# model.fit(X_train_cv, y_train_cv,\n",
