Latest version of the SineReLU convnet.

--- a/notebooks/keras/conv-net-in-keras.ipynb
+++ b/notebooks/keras/conv-net-in-keras.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,19 +40,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/conda/lib/python3.6/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
-      "  from ._conv import register_converters as _register_converters\n",
-      "Using TensorFlow backend.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import keras\n",
@@ -73,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,72 +112,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "_________________________________________________________________\n",
-      "Layer (type)                 Output Shape              Param #   \n",
-      "=================================================================\n",
-      "conv2d_1 (Conv2D)            (None, 28, 28, 32)        1600      \n",
-      "_________________________________________________________________\n",
-      "sine_re_lu_1 (SineReLU)      (None, 28, 28, 32)        0         \n",
-      "_________________________________________________________________\n",
-      "conv2d_2 (Conv2D)            (None, 28, 28, 32)        50208     \n",
-      "_________________________________________________________________\n",
-      "sine_re_lu_2 (SineReLU)      (None, 28, 28, 32)        0         \n",
-      "_________________________________________________________________\n",
-      "max_pooling2d_1 (MaxPooling2 (None, 14, 14, 32)        0         \n",
-      "_________________________________________________________________\n",
-      "dropout_1 (Dropout)          (None, 14, 14, 32)        0         \n",
-      "_________________________________________________________________\n",
-      "conv2d_3 (Conv2D)            (None, 14, 14, 64)        18496     \n",
-      "_________________________________________________________________\n",
-      "sine_re_lu_3 (SineReLU)      (None, 14, 14, 64)        0         \n",
-      "_________________________________________________________________\n",
-      "conv2d_4 (Conv2D)            (None, 14, 14, 64)        36928     \n",
-      "_________________________________________________________________\n",
-      "sine_re_lu_4 (SineReLU)      (None, 14, 14, 64)        0         \n",
-      "_________________________________________________________________\n",
-      "max_pooling2d_2 (MaxPooling2 (None, 7, 7, 64)          0         \n",
-      "_________________________________________________________________\n",
-      "dropout_2 (Dropout)          (None, 7, 7, 64)          0         \n",
-      "_________________________________________________________________\n",
-      "conv2d_5 (Conv2D)            (None, 7, 7, 128)         32896     \n",
-      "_________________________________________________________________\n",
-      "sine_re_lu_5 (SineReLU)      (None, 7, 7, 128)         0         \n",
-      "_________________________________________________________________\n",
-      "conv2d_6 (Conv2D)            (None, 7, 7, 128)         65664     \n",
-      "_________________________________________________________________\n",
-      "sine_re_lu_6 (SineReLU)      (None, 7, 7, 128)         0         \n",
-      "_________________________________________________________________\n",
-      "max_pooling2d_3 (MaxPooling2 (None, 3, 3, 128)         0         \n",
-      "_________________________________________________________________\n",
-      "dropout_3 (Dropout)          (None, 3, 3, 128)         0         \n",
-      "_________________________________________________________________\n",
-      "flatten_1 (Flatten)          (None, 1152)              0         \n",
-      "_________________________________________________________________\n",
-      "dense_1 (Dense)              (None, 512)               590336    \n",
-      "_________________________________________________________________\n",
-      "sine_re_lu_7 (SineReLU)      (None, 512)               0         \n",
-      "_________________________________________________________________\n",
-      "dropout_4 (Dropout)          (None, 512)               0         \n",
-      "_________________________________________________________________\n",
-      "dense_2 (Dense)              (None, 10)                5130      \n",
-      "=================================================================\n",
-      "Total params: 801,258\n",
-      "Trainable params: 801,258\n",
-      "Non-trainable params: 0\n",
-      "_________________________________________________________________\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "epsilon_cnn = 0.0045\n",
-    "epsilon_dense = 0.0083\n",
+    "epsilon_cnn = 0.0025\n",
+    "epsilon_dense = epsilon_cnn\n",
     "\n",
     "model = Sequential()\n",
     "\n",
@@ -234,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,25 +206,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Train on 54000 samples, validate on 6000 samples\n",
-      "Epoch 1/50\n",
-      "54000/54000 [==============================] - 535s 10ms/step - loss: 0.2799 - acc: 0.9077 - val_loss: 0.0431 - val_acc: 0.9863\n",
-      "Epoch 2/50\n",
-      "54000/54000 [==============================] - 530s 10ms/step - loss: 0.0705 - acc: 0.9781 - val_loss: 0.0306 - val_acc: 0.9910\n",
-      "Epoch 3/50\n",
-      "54000/54000 [==============================] - 542s 10ms/step - loss: 0.0519 - acc: 0.9838 - val_loss: 0.0287 - val_acc: 0.9912\n",
-      "Epoch 4/50\n",
-      "54000/54000 [==============================] - 528s 10ms/step - loss: 0.0441 - acc: 0.9867 - val_loss: 0.0240 - val_acc: 0.9938\n",
-      "Epoch 5/50\n",
-      "10624/54000 [====>.........................] - ETA: 6:35 - loss: 0.0357 - acc: 0.9876"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "history = model.fit(X_train, y_train, batch_size = 128, epochs = 50, verbose = 1,\n",
     "          validation_split = 0.1, callbacks=[modelCheckpoint, earlyStopping, tensorboard])"
